TimeTrackingBackend/errors.txt
LoginServer.java:3: error: package spark does not exist
import static spark.Spark.*;
                   ^
LoginServer.java:4: error: package com.google.gson does not exist
import com.google.gson.Gson;
                      ^
LoginServer.java:5: error: package spark does not exist
import spark.Spark;
            ^
LoginServer.java:8: error: package io.github.cdimascio.dotenv does not exist
import io.github.cdimascio.dotenv.Dotenv;
                                 ^
Main.java:5: error: package io.github.cdimascio.dotenv does not exist
import io.github.cdimascio.dotenv.Dotenv;
                                 ^
LoginServer.java:12: error: cannot find symbol
        port(4567);
        ^
  symbol:   method port(int)
  location: class LoginServer
LoginServer.java:13: error: cannot find symbol
        Gson gson = new Gson();
        ^
  symbol:   class Gson
  location: class LoginServer
LoginServer.java:13: error: cannot find symbol
        Gson gson = new Gson();
                        ^
  symbol:   class Gson
  location: class LoginServer
LoginServer.java:16: error: cannot find symbol
        Spark.options("/*", (request, response) -> {
        ^
  symbol:   variable Spark
  location: class LoginServer
LoginServer.java:27: error: cannot find symbol
        before((request, response) -> {
        ^
  symbol:   method before((request,r[...]"); })
  location: class LoginServer
LoginServer.java:41: error: cannot find symbol
        post("/api/login", "application/json", (request, response) -> {
        ^
  symbol:   method post(String,String,(request,r[...]; } })
  location: class LoginServer
LoginServer.java:47: error: cannot find symbol
                Dotenv dotenv = Dotenv.configure().directory("lib").load();
                ^
  symbol:   class Dotenv
  location: class LoginServer
LoginServer.java:47: error: cannot find symbol
                Dotenv dotenv = Dotenv.configure().directory("lib").load();
                                ^
  symbol:   variable Dotenv
  location: class LoginServer
LoginServer.java:77: error: cannot find symbol
        get("/api/clock-status", (req, res) -> {
        ^
  symbol:   method get(String,(req,res)-[...]; } })
  location: class LoginServer
LoginServer.java:81: error: cannot find symbol
                Dotenv dotenv = Dotenv.configure().directory("lib").load();
                ^
  symbol:   class Dotenv
  location: class LoginServer
LoginServer.java:81: error: cannot find symbol
                Dotenv dotenv = Dotenv.configure().directory("lib").load();
                                ^
  symbol:   variable Dotenv
  location: class LoginServer
LoginServer.java:106: error: cannot find symbol
        post("/api/clock-in", "application/json", (req, res) -> {
        ^
  symbol:   method post(String,String,(req,res)-[...]; } })
  location: class LoginServer
LoginServer.java:111: error: cannot find symbol
                Dotenv dotenv = Dotenv.configure().directory("lib").load();
                ^
  symbol:   class Dotenv
  location: class LoginServer
LoginServer.java:111: error: cannot find symbol
                Dotenv dotenv = Dotenv.configure().directory("lib").load();
                                ^
  symbol:   variable Dotenv
  location: class LoginServer
LoginServer.java:148: error: cannot find symbol
        post("/api/clock-out", "application/json", (req, res) -> {
        ^
  symbol:   method post(String,String,(req,res)-[...]; } })
  location: class LoginServer
LoginServer.java:153: error: cannot find symbol
                Dotenv dotenv = Dotenv.configure().directory("lib").load();
                ^
  symbol:   class Dotenv
  location: class LoginServer
LoginServer.java:153: error: cannot find symbol
                Dotenv dotenv = Dotenv.configure().directory("lib").load();
                                ^
  symbol:   variable Dotenv
  location: class LoginServer
LoginServer.java:181: error: cannot find symbol
        get("/api/time-entries", (req, res) -> {
        ^
  symbol:   method get(String,(req,res)-[...]; } })
  location: class LoginServer
LoginServer.java:185: error: cannot find symbol
                Dotenv dotenv = Dotenv.configure().directory("lib").load();
                ^
  symbol:   class Dotenv
  location: class LoginServer
LoginServer.java:185: error: cannot find symbol
                Dotenv dotenv = Dotenv.configure().directory("lib").load();
                                ^
  symbol:   variable Dotenv
  location: class LoginServer
LoginServer.java:217: error: cannot find symbol
        notFound((req, res) -> {
        ^
  symbol:   method notFound((req,res)-[...])); })
  location: class LoginServer
LoginServer.java:223: error: cannot find symbol
        exception(Exception.class, (e, req, res) -> {
        ^
  symbol:   method exception(Class<Exception>,(e,req,res[...](); })
  location: class LoginServer
Main.java:12: error: cannot find symbol
        Dotenv dotenv = Dotenv.configure()
        ^
  symbol:   class Dotenv
  location: class Main
Main.java:12: error: cannot find symbol
        Dotenv dotenv = Dotenv.configure()
                        ^
  symbol:   variable Dotenv
  location: class Main
29 errors
